transition z-index to fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -177,7 +177,22 @@ body {
   font-size: 40px;
   cursor: pointer;
   contain: layout;
-  view-transition-name: card-transition;
+}
+
+.card[data-column="1"] {
+  grid-column: 1;
+}
+
+.card[data-column="2"] {
+  grid-column: 2;
+}
+
+.card[data-row="1"] {
+  grid-row: 1;
+}
+
+.card[data-row="2"] {
+  grid-row: 2;
 }
 
 .card p {
@@ -187,8 +202,9 @@ body {
 
 .card.expanded {
   position: absolute;
-  inset: var(--padding);
-  z-index: 1000;
+  grid-row: 1 / 3;
+  grid-column: 1 / 3;
+  inset: 0;
   background-color: var(--bg-card-expanded);
 }
 
@@ -196,52 +212,60 @@ body {
   color: red;
   font-size: 3rem;
 }
-
-/* Enter Animation */
-::view-transition-new(card-transition) {
-  animation: 2000ms ease 50ms both fade-in, 300ms ease 50ms both scale-up;
+.id1 {
+  view-transition-name: card-transition1;
 }
 
-/* Exit Animation */
-::view-transition-old(card-transition) {
-  animation: 200ms ease 150ms both fade-out, 200ms ease 150ms both scale-down;
+.id2 {
+  view-transition-name: card-transition2;
 }
 
-/* Custom Keyframes */
-@keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+.id3 {
+  view-transition-name: card-transition3;
+}
+
+.id4 {
+  view-transition-name: card-transition4;
+}
+
+::view-transition-new(card-transition1) {
+  animation: fade-in 0.2s;
+}
+::view-transition-old(card-transition1) {
+  animation: fade-out 0.2s;
 }
 
 @keyframes fade-out {
   from {
-    opacity: 1;
+    z-index: 1;
   }
   to {
-    opacity: 0;
+    z-index: 0;
   }
 }
 
-@keyframes scale-up {
+@keyframes fade-in {
   from {
-    transform: scale(0.8);
+    z-index: 0;
   }
   to {
-    transform: scale(1);
+    z-index: 1;
   }
 }
 
-@keyframes scale-down {
-  from {
-    transform: scale(1);
-  }
-  to {
-    transform: scale(0.8);
-  }
+::view-transition-new(card-transition2),
+::view-transition-old(card-transition2) {
+  animation-duration: 0.2s;
+}
+
+::view-transition-new(card-transition3),
+::view-transition-old(card-transition3) {
+  animation-duration: 0.2s;
+}
+
+::view-transition-new(card-transition4),
+::view-transition-old(card-transition4) {
+  animation-duration: 0.2s;
 }
 
 /* Responsive Adjustments */
